force-app/main/default/objects/Participant_Role__c/Participant_Role__c.object-meta.xml
<CustomObject>
    <description>Compensation Role Definition for RevenueTrust. Defines role archetypes with default OTE, variable percentages, eligibility rules, and industry scope.</description>
    <label>Participant Role</label>
    <nameField>
        <label>Participant Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participant Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>