force-app/main/default/objects/Participant_Role__c/fields/Default_Base_Pay__c.field-meta.xml
<CustomField>
    <fullName>Default_Base_Pay__c</fullName>
    <description>Default base pay amount for this role</description>
    <label>Default Base Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>