force-app/main/default/objects/Participant_Role__c/fields/Default_OTE__c.field-meta.xml
<CustomField>
    <fullName>Default_OTE__c</fullName>
    <description>Default On-Target Earnings for this role</description>
    <label>Default OTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>