force-app/main/default/objects/Participant_Role__c/fields/Default_Variable_Pct__c.field-meta.xml
<CustomField>
    <fullName>Default_Variable_Pct__c</fullName>
    <description>Default variable compensation percentage of OTE for this role</description>
    <label>Default Variable Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>