force-app/main/default/objects/Participant_Role__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the participant role and its responsibilities</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>