force-app/main/default/objects/Participant_Role__c/fields/Eligibility_Field__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Field__c</fullName>
    <description>API name of the field used for eligibility matching when type is Opportunity_Role_Field</description>
    <label>Eligibility Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>