force-app/main/default/objects/Participant_Role__c/fields/Eligibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Type__c</fullName>
    <description>How participants with this role are matched to eligible records</description>
    <label>Eligibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Opportunity_Owner</fullName><default>false</default><label>Opportunity Owner</label></value>
            <value><fullName>Opportunity_Role_Field</fullName><default>false</default><label>Opportunity Role Field</label></value>
            <value><fullName>Team_Member</fullName><default>false</default><label>Team Member</label></value>
            <value><fullName>Custom_Query</fullName><default>false</default><label>Custom Query</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>