force-app/main/default/objects/Participant_Role__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this participant role is currently active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>