force-app/main/default/objects/Participant_Role__c/fields/Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this role is a manager-level role</description>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>