force-app/main/default/objects/Participant_Role__c/fields/Role_Code__c.field-meta.xml
<CustomField>
    <fullName>Role_Code__c</fullName>
    <description>Unique short code identifying this participant role</description>
    <externalId>true</externalId>
    <label>Role Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>