force-app/main/default/objects/Participant_Role__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Level at which this role operates for compensation calculations</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Deal_Level</fullName><default>false</default><label>Deal Level</label></value>
            <value><fullName>Team_Level</fullName><default>false</default><label>Team Level</label></value>
            <value><fullName>Global</fullName><default>false</default><label>Global</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>