force-app/main/default/objects/Participant_Role__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Display order for this role in UI lists</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>